--- a/src/styles/globals/globals.css
+++ b/src/styles/globals/globals.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-        
 }
 
 body,
@@ -10,8 +9,19 @@ figure {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-
 a {
     color: inherit;
     text-decoration: inherit;
+}
+
+@font-face {
+    font-family: 'The Godfather';
+    src: url(../fonts/Godfather.eot) format('embedded-opentype'),
+        url(../fonts/Godfather.woff2) format('woff2'),
+        url(../fonts/Godfather.woff) format('woff'),
+        url(../fonts/Godfather.ttf) format('truetype'),
+        url(../fonts/Godfather.svg) format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
